# victor-smart-kill

./: .gitignore  legacy_requirements.txt  pyproject.toml
samples/: listtraps.py
src/victor_mouse_trap/: __init__.py  _api.py
tests/: test_integration.py  test_trap_mapping.py
utils/: listtraps.py
victor_smart_kill/: _client.py  _models.py
