[project]
name = "victor-mouse-trap"
version = "2024.10.19"
description = "Python API specifically for the small Victor Wifi Mouse Trap"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
